[gd_scene load_steps=4 format=3 uid="uid://u32bmmxeotl8"]

[ext_resource type="Script" uid="uid://cuhqk5iv6ysv7" path="res://selector.gd" id="1_0rn1r"]
[ext_resource type="Texture2D" uid="uid://db5k5jr88okr7" path="res://assets/selection.svg" id="1_iwtlm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0rn1r"]
atlas = ExtResource("1_iwtlm")
region = Rect2(0, 3168, 832, 832)

[node name="Selector" type="Node2D"]
script = ExtResource("1_0rn1r")
distance = 14
corner_scale = 80

[node name="TopLeft" type="Sprite2D" parent="."]
position = Vector2(-14, -14)
scale = Vector2(0.0125, 0.0125)
texture = SubResource("AtlasTexture_0rn1r")

[node name="TopRight" type="Sprite2D" parent="."]
position = Vector2(14, -14)
rotation = 1.57079
scale = Vector2(0.0125, 0.0125)
texture = SubResource("AtlasTexture_0rn1r")

[node name="BottomLeft" type="Sprite2D" parent="."]
position = Vector2(-14, 14)
rotation = -1.57079
scale = Vector2(0.0125, 0.0125)
texture = SubResource("AtlasTexture_0rn1r")

[node name="BottomRight" type="Sprite2D" parent="."]
position = Vector2(14, 14)
rotation = -3.14159
scale = Vector2(0.0125, 0.0125)
texture = SubResource("AtlasTexture_0rn1r")
